# openclaw-agent

./: .env.example  .gitignore  Dockerfile  README.md  SKILL.md  deploy.sh  docker-compose.yml  history.md  install-openclaw.sh  market_overview.py  pyproject.toml  sync-skills.sh
.github/workflows/: deploy.yml
docs/: sample-article.md
scripts/: autodeploy.sh
skills/market-intel/: Makefile  SKILL.md  go.mod  template.html
skills/market-overview/: SKILL.md  main.go  template.html
skills/market-overview-go/: Makefile  go.mod  main.go  template.html
skills/tech-intel/: Makefile  SKILL.md  go.mod  main.go  template.html
src/openclaw_agent/: __init__.py  agent.py  config.py  main.py  telegram_bot.py
tests/: test_agent.py  test_config.py
workspace/: IDENTITY.md  TOOLS.md  USER.md
workspace/.clawhub/: lock.json
workspace/.openclaw/: workspace-state.json
workspace/memory/: 2026-02-15.md
workspace/skills/market-overview/: SKILL.md  market_overview.py  template.html
workspace/skills/tech-intel/: SKILL.md  template.html
workspace/skills/world-news/: SAMPLE_OUTPUT.md  SKILL.md  world_news.py
